# Guided-Component-Architect

./: README.md  pyproject.toml  requirements.txt
app/: design_tokens.json  main.py
app/api/: schemas.py  session_store.py
app/engine/: cli.py  config.py  graph.py  main.py  nodes.py  state.py
frontend/: app.js  index.html  styles.css
